# sam.kenney.blog

./: .dockerignore  .env.template  .pre-commit-config.yaml  Dockerfile  README.md  fly.toml  pyproject.toml
src/: app.py  contentful.py  github.py  main.py  routes.py
static/css/: codehilite.css  main.css
static/js/: light_mode.js
templates/: 404.html  blog.html  post.html  projects.html
templates/include/: footer.html  head.html  nav.html  scripts.html
